fix spacing on room grid and room edit screens

--- a/src/app/World/area/view-area/view-area.component.scss
+++ b/src/app/World/area/view-area/view-area.component.scss
@@ -155,3 +155,9 @@ td {
         }
     }
 }
+
+td,
+th {
+    width: 25%;
+    position: relative;
+}
